Fixed sidebar styling on Android. Resulted in small change on iOS. #157

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -134,4 +134,10 @@ nve-warning-badge ion-badge {
     font-size: 0.8em;
     opacity: 0.7;
   }
+
+  &.nve-menu-external {
+    ion-list-header {
+      margin-top: 0;
+    }
+  }
 }
